klibc upgrade - udev broken, working on patching
git-svn-id: http://projects.archlinux.org/svn/initramfs/mkinitcpio@22 880c04e9-e011-0410-abf7-b926e227c9cd

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -1,5 +1,7 @@
-MODULES="8139too snd_intel8x0"
-BINARIES="grep"
+# vim:set ft=sh
+#MODULES="piix ide_disk reiserfs"
+BINARIES=""
 FILES=""
 
-HOOKS="base ide filesystems-auto"
+HOOKS="base pci ide filesystems"
+#HOOKS="base"
