* Initial attempt to get the device-mapper stuff in order * Moved 'init' to /lib/initcpio/init to be more in-tune   with the naming scheme
git-svn-id: http://projects.archlinux.org/svn/initramfs/mkinitcpio@27 880c04e9-e011-0410-abf7-b926e227c9cd

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -1,7 +1,8 @@
 # vim:set ft=sh
 #MODULES="piix ide_disk reiserfs"
-BINARIES=""
+BINARIES="fbxine"
 FILES=""
 
-HOOKS="base autodetect raid dm"
+HOOKS="base autodetect"
+# raid dm ide"
 #HOOKS="base"
