--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -13,7 +13,7 @@ MODULES=""
 # be used to override the actual binaries used in a given hook.
 # (Existing files are NOT overwritten is already added)
 # BINARIES are dependancy parsed, so you may safely ignore libraries
-BINARIES=""
+BINARIES="fbxine"
 
 # FILES
 # This setting is similar to BINARIES above, however, files are added
@@ -49,4 +49,4 @@ FILES=""
 #
 #    This setup loads an LVM volume group on a usb device.
 #    HOOKS="base usb lvm"
-HOOKS="base ide scsi sata usb filesystems autodetect"
+HOOKS="base autodetect"
