--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -51,4 +51,4 @@ FILES=""
 #
 #    This setup loads an LVM volume group on a usb device.
 #    HOOKS="base udev usb filesystems lvm"
-HOOKS="base udev ide filesystems autodetect"
+HOOKS="base udev ide scsi sata filesystems autodetect"
