Improved autodetect functionality with a checked_modules function
git-svn-id: http://projects.archlinux.org/svn/initramfs/mkinitcpio@53 880c04e9-e011-0410-abf7-b926e227c9cd

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -39,7 +39,7 @@ FILES=""
 #
 #    This setup will autodetect all modules for your system and should
 #    work as a sane default
-#    HOOKS="base udev ide scsi sata filesystems autodetect"
+#    HOOKS="base udev autodetect ide scsi sata filesystems"
 #
 #    This setup will generate a 'full' image which supports most systems.
 #    No autodetection is done.
@@ -51,4 +51,4 @@ FILES=""
 #
 #    This setup loads an LVM volume group on a usb device.
 #    HOOKS="base udev usb filesystems lvm"
-HOOKS="base udev ide scsi sata filesystems autodetect"
+HOOKS="base udev autodetect ide scsi sata filesystems"
