--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -47,7 +47,7 @@ FILES=""
 #
 #    This setup assembles an ide raid array with an encrypted root FS.
 #    Note: See 'mkinitcpio -H raid' for more information on raid devices.
-#    HOOKS="base udev ide filesystems raid encrypt"
+#    HOOKS="base udev ide raid encrypt filesystems"
 #
 #    This setup loads an LVM volume group on a usb device.
 #    HOOKS="base udev usb filesystems lvm"
