--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -34,7 +34,7 @@ FILES=""
 # 'filesystems' is _required_ unless you specify your fs modules in MODULES
 # Examples:
 #    This setup specifies all modules in the MODULES setting above.
-#    No raid, lvm, or encrypted root is needed.
+#    No raid, lvm2, or encrypted root is needed.
 #    HOOKS="base"
 #
 #    This setup will autodetect all modules for your system and should
@@ -49,6 +49,6 @@ FILES=""
 #    Note: See 'mkinitcpio -H raid' for more information on raid devices.
 #    HOOKS="base udev ide raid encrypt filesystems"
 #
-#    This setup loads an LVM volume group on a usb device.
-#    HOOKS="base udev usb filesystems lvm"
+#    This setup loads an lvm2 volume group on a usb device.
+#    HOOKS="base udev usb lvm2 filesystems"
 HOOKS="base udev autodetect ide scsi sata filesystems"
