--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -39,16 +39,20 @@ FILES=""
 #
 #    This setup will autodetect all modules for your system and should
 #    work as a sane default
+#    HOOKS="base udev autodetect pata scsi sata filesystems"
+#
+#    This is identical to the above, except the old ide subsystem is
+#    used for IDE devices instead of the new pata subsystem.
 #    HOOKS="base udev autodetect ide scsi sata filesystems"
 #
 #    This setup will generate a 'full' image which supports most systems.
 #    No autodetection is done.
-#    HOOKS="base udev ide scsi sata usb filesystems"
+#    HOOKS="base udev pata scsi sata usb filesystems"
 #
-#    This setup assembles an ide raid array with an encrypted root FS.
+#    This setup assembles an pata raid array with an encrypted root FS.
 #    Note: See 'mkinitcpio -H raid' for more information on raid devices.
-#    HOOKS="base udev ide raid encrypt filesystems"
+#    HOOKS="base udev pata raid encrypt filesystems"
 #
 #    This setup loads an lvm2 volume group on a usb device.
 #    HOOKS="base udev usb lvm2 filesystems"
-HOOKS="base udev autodetect ide scsi sata filesystems"
+HOOKS="base udev autodetect pata scsi sata filesystems"
