--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -56,3 +56,11 @@ FILES=""
 #    This setup loads an lvm2 volume group on a usb device.
 #    HOOKS="base udev usb lvm2 filesystems"
 HOOKS="base udev autodetect pata scsi sata filesystems"
+
+# COMPRESSION
+# Use this to compress the initramfs image. With kernels earlier than
+# 2.6.30, only gzip is supported, which is also the default. Newer kernels
+# support gzip, bzip2 and lzma.
+#COMPRESSION="gzip"
+#COMPRESSION="bzip2"
+#COMPRESSION="lzma"
