mkinitcpio.conf: Fix modprobe.conf location in the FILES= example

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -19,7 +19,7 @@ BINARIES=""
 # as-is and are not parsed in any way.  This is useful for config files.
 # Some users may wish to include modprobe.conf for custom module options
 # like so:
-#    FILES="/etc/modprobe.conf"
+#    FILES="/etc/modprobe.d/modprobe.conf"
 FILES=""
 
 # HOOKS
