mkinitcpio.conf: note implicit support for lzop
Signed-off-by: Dave Reisner <d@falconindy.com>

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -65,6 +65,7 @@ HOOKS="base udev autodetect pata scsi sata filesystems"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
 #COMPRESSION="xz"
+#COMPRESSION="lzop"
 
 # COMPRESSION_OPTIONS
 # Additional options for the compressor
