--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -48,9 +48,9 @@ FILES=""
 ##   No autodetection is done.
 #    HOOKS="base udev pata scsi sata usb filesystems"
 #
-##   This setup assembles a pata raid array with an encrypted root FS.
-##   Note: See 'mkinitcpio -H raid' for more information on raid devices.
-#    HOOKS="base udev pata raid encrypt filesystems"
+##   This setup assembles a pata mdadm array with an encrypted root FS.
+##   Note: See 'mkinitcpio -H mdadm' for more information on raid devices.
+#    HOOKS="base udev pata mdadm encrypt filesystems"
 #
 ##   This setup loads an lvm2 volume group on a usb device.
 #    HOOKS="base udev usb lvm2 filesystems"
