--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -54,7 +54,7 @@ FILES=""
 #
 ##   This setup loads an lvm2 volume group on a usb device.
 #    HOOKS="base udev usb lvm2 filesystems"
-HOOKS="base udev autodetect pata scsi sata filesystems"
+HOOKS="base udev autodetect pata scsi sata filesystems usbinput"
 
 # COMPRESSION
 # Use this to compress the initramfs image. With kernels earlier than
