update comments in config
This really should be moved into a man page.

FS#30042.

Signed-off-by: Dave Reisner <dreisner@archlinux.org>

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -8,9 +8,8 @@ MODULES=""
 
 # BINARIES
 # This setting includes any additional binaries a given user may
-# wish into the CPIO image.  This is run first, so it may be used to
-# override the actual binaries used in a given hook.
-# (Existing files are NOT overwritten if already added)
+# wish into the CPIO image.  This is run last, so it may be used to
+# override the actual binaries included by a given hook
 # BINARIES are dependency parsed, so you may safely ignore libraries
 BINARIES=""
 
@@ -56,14 +55,12 @@ FILES=""
 #    HOOKS="base udev usb lvm2 filesystems"
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
-#    fsck and shutdown hooks.
+#    usr, fsck and shutdown hooks.
 HOOKS="base udev autodetect pata scsi sata filesystems usbinput fsck"
 
 # COMPRESSION
-# Use this to compress the initramfs image. With kernels earlier than
-# 2.6.30, only gzip is supported, which is also the default. Newer kernels
-# support gzip, bzip2 and lzma. Kernels 2.6.38 and later support xz
-# compression.
+# Use this to compress the initramfs image. By default, gzip compression
+# is used. Use 'cat' to create an uncompressed image.
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
