modconf: add new hook to simply inclusion of modprobe config
Add this as a default in the config file.

Signed-off-by: Dave Reisner <dreisner@archlinux.org>

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -16,9 +16,6 @@ BINARIES=""
 # FILES
 # This setting is similar to BINARIES above, however, files are added
 # as-is and are not parsed in any way.  This is useful for config files.
-# Some users may wish to include modprobe.conf for custom module options
-# like so:
-#    FILES="/etc/modprobe.d/modprobe.conf"
 FILES=""
 
 # HOOKS
@@ -52,7 +49,7 @@ FILES=""
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS="base udev autodetect block filesystems usbinput fsck"
+HOOKS="base udev autodetect modconf block filesystems usbinput fsck"
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
