--- a/systemd/mkinitcpio-generate-shutdown-ramfs.service
+++ b/systemd/mkinitcpio-generate-shutdown-ramfs.service
@@ -9,7 +9,7 @@ Type=oneshot
 # /tmp could be umounted at this point
 # use /run as temporary directory
 Environment=TMPDIR=/run
-ExecStart=/usr/bin/mkinitcpio -A sd-shutdown -c /dev/null -d /run/initramfs
+ExecStart=/usr/bin/mkinitcpio -A sd-shutdown -k none -c /dev/null -d /run/initramfs
 
 [Install]
 WantedBy=shutdown.target
