add MODULES_DECOMPRESS switch
Fixes https://bugs.archlinux.org/task/72882

Co-authored-by: nl6720 <nl6720@gmail.com>
Co-authored-by: Morten Linderud <morten@linderud.pw>
Co-authored-by: Isaac Good <IsaacG@users.noreply.github.com>

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -65,3 +65,9 @@ HOOKS=(base udev autodetect modconf kms keyboard keymap consolefont block filesy
 # COMPRESSION_OPTIONS
 # Additional options for the compressor
 #COMPRESSION_OPTIONS=()
+
+# MODULES_DECOMPRESS
+# Decompress kernel modules during initramfs creation.
+# Enable to speedup boot process, disable to save RAM
+# during early userspace. Switch (yes/no).
+#MODULES_DECOMPRESS="yes"
