Good idea, add the default value
Co-authored-by: nl6720 <nl6720@gmail.com>

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -69,5 +69,5 @@ HOOKS=(base udev autodetect modconf block filesystems keyboard fsck)
 # MODULES_DECOMPRESS
 # Decompress kernel modules during initramfs creation.
 # Enable to speedup boot process, disable to save RAM
-# during early userspace. Switch (yes/no) default=yes
-#MODULES_DECOMPRESS=""
+# during early userspace. Switch (yes/no).
+#MODULES_DECOMPRESS="yes"
