--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -49,7 +49,7 @@ FILES=()
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr and fsck hooks.
-HOOKS=(base udev autodetect keyboard keymap consolefont modconf block filesystems fsck)
+HOOKS=(base udev autodetect kms keyboard keymap consolefont modconf block filesystems fsck)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, zstd compression
