mkinitcpio.conf: adjust the placement of the modconf hook for consistency
Place it right after base, udev and autodetect, so that all examples match.

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -42,14 +42,14 @@ FILES=()
 #
 ##   This setup assembles a mdadm array with an encrypted root file system.
 ##   Note: See 'mkinitcpio -H mdadm_udev' for more information on RAID devices.
-#    HOOKS=(base udev keyboard keymap consolefont modconf block mdadm_udev encrypt filesystems fsck)
+#    HOOKS=(base udev modconf keyboard keymap consolefont block mdadm_udev encrypt filesystems fsck)
 #
 ##   This setup loads an lvm2 volume group.
 #    HOOKS=(base udev modconf block lvm2 filesystems fsck)
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr and fsck hooks.
-HOOKS=(base udev autodetect kms keyboard keymap consolefont modconf block filesystems fsck)
+HOOKS=(base udev autodetect modconf kms keyboard keymap consolefont block filesystems fsck)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, zstd compression
