functions: implement find_module_from_symbol
This implements a function to look to look up modules based off on a defined symbol.

Fixes: https://gitlab.archlinux.org/archlinux/mkinitcpio/mkinitcpio/-/issues/132

Signed-off-by: Morten Linderud <morten@linderud.pw>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ test:
     artifacts:
         reports:
             junit: bats-report.xml
+    tags:
+        - vm
 
 coverage:
     stage: check
