--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -47,6 +47,9 @@ FILES=()
 ##   This setup loads an lvm2 volume group.
 #    HOOKS=(base udev modconf block lvm2 filesystems fsck)
 #
+##   This will create a systemd based initramfs which loads an encrypted root filesystem.
+#    HOOKS=(base systemd autodetect modconf kms keyboard sd-vconsole sd-encrypt block filesystems fsck)
+#
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr and fsck hooks.
 HOOKS=(base udev autodetect modconf kms keyboard keymap consolefont block filesystems fsck)
