tests: Add tests to check for reproducible builds
Also fixes a typo.

Fixes: 2ca86680756bed59c169545d3f98e4c6c0f6814d
Signed-off-by: Morten Linderud <morten@linderud.pw>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,3 +49,5 @@ coverage:
             coverage_report:
                 coverage_format: cobertura
                 path: coverage/bats.*/cobertura.xml
+    tags:
+        - vm
