--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
         # https://gitlab.archlinux.org/archlinux/archlinux-keyring/-/issues/4
         - echo -e "\e[0Ksection_start:`date +%s`:pacman[collapsed=true]\r\e[0KInstalling dependencies"
         - pacman -Sy --needed --noconfirm archlinux-keyring
-        - pacman --noconfirm -Syu --needed bash-bats bash-bats-assert bash-bats-support diffutils git jq kcov lzop make shellcheck
+        - pacman --noconfirm -Syu --needed bats bats-assert bats-support diffutils git jq kcov lzop make shellcheck
         - echo -e "\e[0Ksection_end:`date +%s`:pacman\r\e[0K"
 
 check:
