mkinitcpio: do not use zstd compression for kernels < 5.9
Support for zstd-compressed initramfs was added in Linux 5.9.
Since LTS 5.4 is still supported by upstream until 2025-12 and
SLTS 4.19 until 2029-01, add a fallback to gzip for Linux < 5.9 to
avoid creating unbootable initramfs images.

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -56,7 +56,8 @@ HOOKS=(base udev autodetect microcode modconf kms keyboard keymap consolefont bl
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, zstd compression
-# is used. Use 'cat' to create an uncompressed image.
+# is used for Linux ≥ 5.9 and gzip compression is used for Linux < 5.9.
+# Use 'cat' to create an uncompressed image.
 #COMPRESSION="zstd"
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
