--- a/systemd/mkinitcpio-generate-shutdown-ramfs.service
+++ b/systemd/mkinitcpio-generate-shutdown-ramfs.service
@@ -8,7 +8,7 @@ ConditionFileIsExecutable=!/run/initramfs/shutdown
 
 [Service]
 Type=oneshot
-# /tmp could be umounted at this point
-# use /run as temporary directory
-Environment=TMPDIR=/run
-ExecStart=/usr/bin/mkinitcpio -A sd-shutdown -k none -c /dev/null -d /run/initramfs
+# /tmp/ could be unmounted at this point
+# use /run/initcpio-tmp/ as temporary directory
+RuntimeDirectory=initcpio-tmp
+ExecStart=/usr/bin/mkinitcpio -A sd-shutdown -d /run/initramfs -k none -c /dev/null -t "$RUNTIME_DIRECTORY"
