mkinitcpio: use MODULES_DECOMPRESS to also control firmware file decompression
Implement firmware file decompression and symlink re-linking.

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -71,7 +71,7 @@ HOOKS=(base udev autodetect microcode modconf kms keyboard keymap consolefont bl
 #COMPRESSION_OPTIONS=()
 
 # MODULES_DECOMPRESS
-# Decompress kernel modules during initramfs creation.
+# Decompress kernel modules and their firmware during initramfs creation.
 # Enable to speedup boot process, disable to save RAM
 # during early userspace. Switch (yes/no).
 #MODULES_DECOMPRESS="yes"
