--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -71,7 +71,11 @@ HOOKS=(base udev autodetect microcode modconf kms keyboard keymap consolefont bl
 #COMPRESSION_OPTIONS=()
 
 # MODULES_DECOMPRESS
-# Decompress kernel modules and their firmware during initramfs creation.
-# Enable to speedup boot process, disable to save RAM
-# during early userspace. Switch (yes/no).
-#MODULES_DECOMPRESS="yes"
+# Decompress loadable kernel modules and their firmware during initramfs
+# creation. Switch (yes/no).
+# Enable to allow further decreasing image size when using high compression
+# (e.g. xz -9e or zstd --long --ultra -22) at the expense of increased RAM usage
+# at early boot.
+# Note that any compressed files will be placed in the uncompressed early CPIO
+# to avoid double compression.
+#MODULES_DECOMPRESS="no"
