Fix vim modeline in mkinitcpio.conf

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -1,4 +1,4 @@
-# vim:set ft=sh
+# vim:set ft=sh:
 # MODULES
 # The following modules are loaded before any boot hooks are
 # run.  Advanced users may wish to specify all system modules
