meson.build: add install/sd-encrypt-opensc

--- a/install/meson.build
+++ b/install/meson.build
@@ -28,6 +28,7 @@ hooks = [
 
 systemd_hooks = [
     'sd-encrypt',
+    'sd-encrypt-opensc',
     'sd-shutdown',
     'sd-vconsole',
     'systemd',
