Add hooks that support systemd-volatile-root and systemd-veritysetup-generator

--- a/install/meson.build
+++ b/install/meson.build
@@ -27,6 +27,8 @@ hooks = [
 ]
 
 systemd_hooks = [
+    'sd-verity',
+    'sd-volatile',
     'sd-encrypt',
     'sd-encrypt-opensc',
     'sd-shutdown',
