meson: support devenv
Slight hack, but this allows us to run `meson devenv -C build` and test
the `./mkinitcpio` binary without having to install it or manually set
MESON_TEST.

Signed-off-by: Morten Linderud <morten@linderud.pw>

--- a/meson.build
+++ b/meson.build
@@ -203,6 +203,11 @@ if shellcheck.found()
     )
 endif
 
+# Support devenv
+devenv = environment()
+devenv.set('MESON_TEST', '1')
+meson.add_devenv(devenv)
+
 subdir('hooks')
 subdir('install')
 subdir('kernel-install')
