mkinitcpio.conf: put block before sd-encrypt in encrypted root example

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -48,7 +48,7 @@ FILES=()
 #    HOOKS=(base udev microcode modconf block lvm2 filesystems fsck)
 #
 ##   This will create a systemd based initramfs which loads an encrypted root filesystem.
-#    HOOKS=(base systemd autodetect microcode modconf kms keyboard sd-vconsole sd-encrypt block filesystems fsck)
+#    HOOKS=(base systemd autodetect microcode modconf kms keyboard sd-vconsole block sd-encrypt filesystems fsck)
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr and fsck hooks.
